# fccu_test

./: CMakeLists.txt  README.docx  prj.conf
boards/espressif/fccu_v2/: Kconfig  Kconfig.fccu_v2  board.cmake  board.yml  fccu_v2-pinctrl.dtsi  fccu_v2.yaml  fccu_v2_procpu.dts  fccu_v2_procpu_defconfig
can_test/src/: main.c
can_test/src/can/: can_def.c  can_def.h  can_definitions.c  can_ids.h  can_interface.c  can_interface.h
can_test/src/ui/: system_status.h
dbc/: hydrogreen-can-definitions.dbc
